--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,16 @@
     <artifactId>cn.zc.mycompiler</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
+        <dependency>
+            <groupId>mylocal</groupId>
+            <artifactId>gluonj</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>
+                ${project.basedir}/lib/gluonj.jar
+            </systemPath>
+        </dependency>
+    </dependencies>
 </project>
