增加数组解析

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 /mycompiler.iml
 /.idea
 /src/main/java/origin
+/src/main/java/stone
+/src/main/java/chap3
+/src/main/java/chap5
+/src/main/java/chap6
+/src/main/java/chap7
+/src/main/java/chap8
+/src/main/java/chap9
+/src/main/java/chap10
+/src/main/java/chap11
+/src/main/java/chap12
